k8s/a-b-testing/hello-world-ingress-v2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Canary"
spec:
  defaultBackend:
    service:
      name: hello-world-service-v2
      port:
        number: 8080
